<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.epam.jdi</groupId>
    <artifactId>jdi-light-testng-empty-template</artifactId>
    <version>1.0.0</version>
    <name>Template: JDI Light TestNG Testing project</name>

    <properties>
        <driver>chrome</driver>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <aspectj.version>1.9.7</aspectj.version>
        <domain>https://jdi-testing.github.io/jdi-light/</domain>
        <testng.version>7.8.0</testng.version>
        <allure.testng>2.23.0</allure.testng>
        <allure.maven>2.12.0</allure.maven>
        <jetty.version>9.4.12.RC2</jetty.version>
        <jdi.version>RELEASE</jdi.version>
        <!-- The value is for example, use our own domain value -->
        <domain>https://jdi-testing.github.io/jdi-light/</domain>
        <driver.remote.url/>
        <log.level>INFO</log.level>
        <!-- for JDK 16+ use profile jdk16 -->
        <aspectj.args></aspectj.args>
    </properties>

    <profiles>
        <profile>
            <id>jdk16</id>
            <activation>
                <jdk>[16, 20]</jdk>
            </activation>
            <properties>
                <aspectj.args>--add-opens java.base/java.lang=ALL-UNNAMED</aspectj.args>
            </properties>
        </profile>

        <profile>
            <id>ci</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <driver.remote.url>http://localhost:4444/wd/hub</driver.remote.url>
                <log.level>INFO</log.level>
            </properties>
        </profile>
    </profiles>

    <dependencies>
        <!--JDI-->
        <dependency>
            <groupId>com.epam.jdi</groupId>
            <artifactId>jdi-light-html</artifactId>
            <version>${jdi.version}</version>
        </dependency>
             
        <!-- If you need Material UI library      
        <dependency>
            <groupId>com.epam.jdi</groupId>
            <artifactId>jdi-light-material-ui</artifactId>
            <version>${jdi.version}</version>
        </dependency>
        -->
             
        <!-- If you need Vuetify library     
        <dependency>
            <groupId>com.epam.jdi</groupId>
            <artifactId>jdi-light-vuetify</artifactId>
            <version>${jdi.version}</version>
        </dependency>
        -->

        <!--Allure-->
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
            <version>${allure.testng}</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.testng</groupId>
                    <artifactId>testng</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>io.qameta.allure</groupId>
                    <artifactId>allure-java-commons</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <systemPropertyVariables>
                        <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
                    </systemPropertyVariables>
                    <suiteXmlFiles>
                        <suiteXmlFile>src/test/resources/general.xml</suiteXmlFile>
                    </suiteXmlFiles>
                    <argLine>
                        ${aspectj.args}
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                    </argLine>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>${allure.maven}</version>
                <configuration>
                    <reportVersion>2.10.0</reportVersion>
                </configuration>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
            </resource>
            <resource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

</project>
